# short-links

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: README  env.py
alembic/versions/: .gitkeep  20260313_0001_initial_schema.py  20260313_0002_archived_links_and_unused_cleanup.py
app/: cache.py  lifecycle.py  main.py  settings.py
app/api/: router.py
app/auth/: dependencies.py  schemas.py  security.py
app/db/: models.py  session.py
app/links/: __init__.py  cache.py  cleanup.py  schemas.py  service.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_154b9a16b3b765c0_dependencies_py.html  z_154b9a16b3b765c0_schemas_py.html  z_154b9a16b3b765c0_security_py.html  z_268fc55e7833766c_cache_py.html  z_268fc55e7833766c_cleanup_py.html  z_268fc55e7833766c_schemas_py.html  z_268fc55e7833766c_service_py.html  z_395c4f306d1419cf_base_py.html  z_395c4f306d1419cf_models_py.html  z_395c4f306d1419cf_session_py.html  z_5f5a17c013354698_cache_py.html  z_5f5a17c013354698_lifecycle_py.html  z_5f5a17c013354698_main_py.html  z_5f5a17c013354698_settings_py.html  z_7bced6e93b6b263d_auth_py.html  z_7bced6e93b6b263d_links_py.html  z_cfb6adc3f81c8e3c_router_py.html
reports/: coverage-test-run.txt  coverage.txt  test-results.txt
short_links/: task.md
streamlit_app/: api_client.py  app.py
tests/: conftest.py
tests/functional/: test_auth_api.py  test_links_api.py
tests/load/: locust_run_stats.csv  locust_run_stats_history.csv  locustfile.py
tests/unit/: test_auth_dependencies.py  test_auth_schemas.py  test_auth_security.py  test_db_session.py  test_lifecycle.py  test_links_cache.py  (+3 more)
(+2 files in other folders)
