[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "short-links-service"
version = "0.1.0"
description = "Scaffold for a short links service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16.0,<2.0.0",
  "asyncpg>=0.30.0,<1.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "pydantic-settings>=2.8.0,<3.0.0",
  "redis>=6.0.0,<7.0.0",
  "sqlalchemy>=2.0.0,<3.0.0",
  "streamlit>=1.44.0,<2.0.0",
  "uvicorn[standard]>=0.34.0,<1.0.0",
]

[project.optional-dependencies]
test = [
  "aiosqlite>=0.21.0,<1.0.0",
  "coverage>=7.8.0,<8.0.0",
  "httpx>=0.28.0,<1.0.0",
  "locust>=2.37.0,<3.0.0",
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.26.0,<1.0.0",
  "pytest-mock>=3.14.0,<4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
skip_covered = false
show_missing = true
omit = ["*/__init__.py"]
